api update. Some vue design for frontend
